--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <body>
   <div class="container">
     <div class="meme-container">
-      <img id="meme-image" class="meme-image" src="" alt="">
+      <img id="meme-image" class="meme-image" src="P.png" alt="">
       <span id="top-text" class="meme-text top-half"></span>
       <span id="bottom-text" class="meme-text bottom-half"></span>
     </div>
